[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Sprites/Characters/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Objects/playerProjectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/projectileCreator.gd" type="Script" id=4]
[ext_resource path="res://Assets/Audio/SFX/Player/playerShot.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sprites/Effects/MuzzleFlash.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 13 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), null ],
"loop": false,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11, 11 )

[node name="Player" type="KinematicBody2D"]
z_index = -2
script = ExtResource( 2 )
speed = 180
focusSpeed = 90

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="SpriteAnchor" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="SpriteAnchor"]
position = Vector2( 0, 16 )
texture = ExtResource( 1 )
offset = Vector2( 0, -16 )
hframes = 4

[node name="MuzzleFlash" type="AnimatedSprite" parent="SpriteAnchor"]
position = Vector2( 12, 0 )
frames = SubResource( 6 )
frame = 2
speed_scale = 0.8
playing = true

[node name="projectileCreator" type="Position2D" parent="."]
z_index = 1
script = ExtResource( 4 )
projectileReferences = [ ExtResource( 3 ) ]
audioReferences = [ ExtResource( 5 ) ]

[node name="iframeTimer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true

[node name="flashTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="shootTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="yieldTimer" type="Timer" parent="."]

[node name="DamageBox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageBox"]
shape = SubResource( 2 )

[node name="GrazeBox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrazeBox"]
modulate = Color( 0.560784, 0.941176, 0.054902, 1 )
shape = SubResource( 3 )

[connection signal="area_entered" from="DamageBox" to="." method="_on_DamageBox_area_entered"]
[connection signal="area_entered" from="GrazeBox" to="." method="_on_GrazeBox_area_entered"]
